--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/mobile.css" media="(max-width: 800px)">
+    <link rel="stylesheet" href="./mobile.css" media="(max-width: 800px)">
     <title>E-commerce market</title>
   </head>
   <body>
